# hm-fashion-recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
fashion_recommender/: __main__.py  cli.py
fashion_recommender/clients/: __init__.py  milvus.py
fashion_recommender/data/: articles.py  base.py  raw.py
fashion_recommender/data/inputs/: dataset_config.py
fashion_recommender/models/: base.py  doc2vec.py  word2vec.py
fashion_recommender/models/deserializers/: base.py  disk.py
fashion_recommender/models/plotters/: __init__.py  model.py
fashion_recommender/models/serializers/: base.py  disk.py
fashion_recommender/neighbours/: database.py
fashion_recommender/pipelines/: predictions.py  training.py
fashion_recommender/sink/: __init__.py  vector.py
fashion_recommender/sink/clients/: milvus.py
